Initial HTML & CSS

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,197 @@
 </head>
 
 <body>
+    <div class="wrapper">
+        <!-- header -->
+        <header class="header box box--gradient">
+            <div class="container header_content">
+                <nav class="header__nav">
+                    <h1 class="header__logo">CloudingCalc</h1>
+                    <div>
+                        <button role="search" class="header__search">
+                            <img src="img/icon-search.svg" alt="search" />
+                        </button>
+                        <a href="#" class="header__link">Log in</a>
+                        <a href="#" class="header__link">Sign Up</a>
+                    </div>
+                </nav>
+                <div class="header__description">
+                    <h2 class="headline headline--big headline--inherit-color">Dolores dicta architecto. Aliquam. Blanditiis.</h2>
+                    <p class="header__text">Excepturi non veritatis, velit sapiente ipsa porro accusantium ex quia quos sequi earum praesentium.</p>
+                    <a href="#" class="btn btn--white">Start for free</a>
+                    <a href="#" class="btn btn--stroke">Read the docs</a>
+                </div>
+            </div>
+        </header>
+        <!-- /header -->
+        <!-- about -->
+        <section class="about box">
+            <div class="about__row container">
+                <div class="about__col about__col--txt">
+                    <h3 class="headline">Aperiam ducimus, repellendus</h3>
+                    <p>
+                        Minima porro velit tempora reprehenderit magni error fuga tempore eligendi temporibus, molestias quo neque cumque architecto
+                        omnis numquam nesciunt adipisci vero at, dolore, voluptatem voluptatibus atque recusandae nam quidem.
+                    </p>
+                </div>
+                <div class="about__col about__col--img">
+                    sth
+                </div>
+            </div>
+            <div class="about__row container">
+                <div class="about__col about__col--img">
+                    sth
+                </div>
+                <div class="about__col about__col--txt">
+                    <h3 class="headline">Optio quidem iusto</h3>
+                    <p>Accusantium debitis quia earum, vero, reprehenderit, id facilis obcaecati minima aliquid omnis, tenetur
+                        accusamus ab. Id vel ea et vitae magnam cupiditate pariatur dolor velit eum officiis, excepturi molestiae
+                        fugit vero aperiam.</p>
+                </div>
+            </div>
+        </section>
+        <!-- /about -->
+        <!-- carousel -->
+        <section class="carousel box box--gradient">
+            <header class="intro intro--white">
+                <h3 class="headline headline--inherit-color">Asperiores</h3>
+                <p>Accusantium debitis quia earum</p>
+            </header>
+            <div class="slider">
+                <ul class="slider__list">
+                    <li class="slider__slide">
+                        <h4 class="headline headline--small">Accusantium debitis 1</h4>
+                        <p>Accusantium debitis quia earum, vero, reprehenderit, id facilis obcaecati minima aliquid omnis, tenetur
+                            accusamus ab. Id vel ea et vitae magnam cupiditate</p>
+                    </li>
+                    <li class="slider__slide">
+                        <h4 class="headline headline--small">Accusantium debitis 2</h4>
+                        <p>Accusantium debitis quia earum, vero, reprehenderit, id facilis obcaecati minima aliquid omnis, tenetur
+                            accusamus ab. Id vel ea et vitae magnam cupiditate</p>
+                    </li>
+                    <li class="slider__slide slider__slide--active">
+                        <h4 class="headline headline--small">Accusantium debitis 3</h4>
+                        <p>Accusantium debitis quia earum, vero, reprehenderit, id facilis obcaecati minima aliquid omnis, tenetur
+                            accusamus ab. Id vel ea et vitae magnam cupiditate</p>
+                    </li>
+                    <li class="slider__slide">
+                        <h4 class="headline headline--small">Accusantium debitis 4</h4>
+                        <p>Accusantium debitis quia earum, vero, reprehenderit, id facilis obcaecati minima aliquid omnis, tenetur
+                            accusamus ab. Id vel ea et vitae magnam cupiditate</p>
+                    </li>
+                    <li class="slider__slide">
+                        <h4 class="headline headline--small">Accusantium debitis 5</h4>
+                        <p>Accusantium debitis quia earum, vero, reprehenderit, id facilis obcaecati minima aliquid omnis, tenetur
+                            accusamus ab. Id vel ea et vitae magnam cupiditate</p>
+                    </li>
+                    <li class="slider__slide">
+                        <h4 class="headline headline--small">Accusantium debitis 6</h4>
+                        <p>Accusantium debitis quia earum, vero, reprehenderit, id facilis obcaecati minima aliquid omnis, tenetur
+                            accusamus ab. Id vel ea et vitae magnam cupiditate</p>
+                    </li>
+                </ul>
+                <ul class="slider__indicators">
+                    <li class="slider__indicator"></li>
+                    <li class="slider__indicator"></li>
+                    <li class="slider__indicator"></li>
+                </ul>
+            </div>
+        </section>
+        <!-- carousel -->
+        <!-- pricing -->
+        <section class="pricing box">
+            <div class="container">
+                <header class="intro">
+                    <h3 class="headline">At labore</h3>
+                    <p>Accusantium debitis quia earum</p>
+                </header>
+                <div class="prices">
+                    <div class="prices__box">
+                        <div class="prices__card">
+                            <div class="prices__price">
+                                <h4 class="headline">CPU+</h4>
+                                <sup>$</sup>
+                                <b>0.99</b>
+                                <br />&#47;CPU per hour
+                            </div>
+                            <ul class="checkmark-list">
+                                <li class="checkmark-list__li">Dolores dicta architecto sunt possimus corporis beatae aspernatur</li>
+                                <li class="checkmark-list__li">Dolores dicta architecto sunt</li>
+                                <li class="checkmark-list__li">Dolores dicta architecto sunt possimus corporis beatae aspernatur</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="prices__box">
+                        <div class="prices__card">
+                            <div class="prices__price">
+                                <h4 class="headline">CPU+</h4>
+                                <sup>$</sup>
+                                <b>0.99</b>
+                                <br />&#47;CPU per hour
+                            </div>
+                            <ul class="checkmark-list">
+                                <li class="checkmark-list__li">Dolores dicta architecto sunt possimus corporis beatae aspernatur</li>
+                                <li class="checkmark-list__li">Dolores dicta architecto sunt</li>
+                                <li class="checkmark-list__li">Dolores dicta architecto sunt possimus corporis beatae aspernatur</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="prices__box">
+                        <div class="prices__card">
+                            <div class="prices__price">
+                                <h4 class="headline">CPU+</h4>
+                                <sup>$</sup>
+                                <b>0.99</b>
+                                <br />&#47;CPU per hour
+                            </div>
+                            <ul class="checkmark-list">
+                                <li class="checkmark-list__li">Dolores dicta architecto sunt possimus corporis beatae aspernatur</li>
+                                <li class="checkmark-list__li">Dolores dicta architecto sunt</li>
+                                <li class="checkmark-list__li">Dolores dicta architecto sunt possimus corporis beatae aspernatur</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="prices__box">
+                        <div class="prices__card">
+                            <div class="prices__price">
+                                <h4 class="headline">CPU+</h4>
+                                <sup>$</sup>
+                                <b>0.99</b>
+                                <br />&#47;CPU per hour
+                            </div>
+                            <ul class="checkmark-list">
+                                <li class="checkmark-list__li">Dolores dicta architecto sunt possimus corporis beatae aspernatur</li>
+                                <li class="checkmark-list__li">Dolores dicta architecto sunt</li>
+                                <li class="checkmark-list__li">Dolores dicta architecto sunt possimus corporis beatae aspernatur</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <h4 class="headline">Rerum corrupti dolorum possimus corporis:</h4>
+                <ul class="checkmark-list checkmark-list--col-3">
+                    <li class="checkmark-list__li">Dolores dicta architecto sunt possimus corporis beatae aspernatur</li>
+                    <li class="checkmark-list__li">Dolores dicta architecto sunt</li>
+                    <li class="checkmark-list__li">Dolores dicta architecto sunt possimus corporis beatae aspernatur</li>
+                    <li class="checkmark-list__li">Dolores dicta architecto sunt possimus corporis beatae aspernatur</li>
+                    <li class="checkmark-list__li">Dolores dicta architecto sunt possimus corporis beatae aspernatur</li>
+                    <li class="checkmark-list__li">Dolores dicta architecto sunt</li>
+                </ul>
+            </div>
+        </section>
+        <!-- /pricing -->
+        <!-- misc -->
+        <section class="misc">
+            <header class="intro">
+                <h3 class="headline">Reprehenderit, dolorem?</h3>
+                <p>Doloribus vel, molestias, suscipit!</p>
+            </header>
+            <a href="#" class="btn btn--blue">Start for free</a>
+            <a href="#" class="btn btn--stroke">Read the docs</a>
+        </section>
+        <!-- misc -->
+    </div>
     <script src="js/bundle.min.js"></script>
     <script>document.addEventListener('DOMContentLoaded', entryPoint.default);</script>
 </body>
+
 </html>
