RWD (mobile first)

--- a/src/index.html
+++ b/src/index.html
@@ -51,18 +51,18 @@
                 </div>
             </div>
             <div class="about__row about__row--top">
-                <div class="about__col about__col--img" role="presentation">
+                <div class="about__col about__col--txt about__col--right">
+                    <h3 class="headline">Optio quidem iusto</h3>
+                    <p>Accusantium debitis quia earum, vero, reprehenderit, id facilis obcaecati minima aliquid omnis, tenetur
+                        accusamus ab. Id vel ea et vitae magnam cupiditate pariatur dolor velit eum officiis, excepturi molestiae
+                        fugit vero aperiam.</p>
+                </div>
+                <div class="about__col about__col--img about__col--left" role="presentation">
                     <img src="img/comp-editor-2.svg" alt="" />
                     <img src="img/ranges.png" alt="" class="badge about__img about__img--ranges" />
                     <img src="img/success.png" alt="" class="badge about__img about__img--success" />
                     <span class="icon-polygon about__img about__img--polygon-green"></span>
                     <span class="icon-triangle about__img about__img--triangle"></span>
-                </div>
-                <div class="about__col about__col--txt">
-                    <h3 class="headline">Optio quidem iusto</h3>
-                    <p>Accusantium debitis quia earum, vero, reprehenderit, id facilis obcaecati minima aliquid omnis, tenetur
-                        accusamus ab. Id vel ea et vitae magnam cupiditate pariatur dolor velit eum officiis, excepturi molestiae
-                        fugit vero aperiam.</p>
                 </div>
             </div>
         </section>
