--- a/src/index.html
+++ b/src/index.html
@@ -17,8 +17,7 @@
                 <nav class="header__nav">
                     <h1 class="header__logo">CloudingCalc</h1>
                     <div class="header__links">
-                        <button role="search" class="header__search icon-search">
-                        </button>
+                        <span role="search"><button class="header__search icon-search"></button></span>
                         <span class="header__divider"></span>
                         <a href="#" class="header__link">Log in</a>
                         <a href="#" class="header__link">Sign Up</a>
@@ -35,34 +34,42 @@
         <!-- /header -->
         <!-- about -->
         <section class="about box">
-            <div class="about__row about__row--center">
+            <div class="about__row container about__row--center">
                 <div class="about__col about__col--txt">
-                    <h3 class="headline">Aperiam ducimus, repellendus</h3>
-                    <p>
-                        Minima porro velit tempora reprehenderit magni error fuga tempore eligendi temporibus, molestias quo neque cumque architecto
-                        omnis numquam nesciunt adipisci vero at, dolore, voluptatem voluptatibus atque recusandae nam quidem.
-                    </p>
+                    <div class="about__content">
+                        <h3 class="headline">Aperiam ducimus, repellendus</h3>
+                        <p>
+                            Minima porro velit tempora reprehenderit magni error fuga tempore eligendi temporibus, molestias quo neque cumque architecto
+                            omnis numquam nesciunt adipisci vero at, dolore, voluptatem voluptatibus atque recusandae nam quidem.
+                        </p>
+                    </div>
                 </div>
                 <div class="about__col about__col--img" role="presentation">
-                    <img src="img/comp-editor-1.svg" alt="" />
-                    <img src="img/error.png" alt="" class="badge about__img about__img--error" />
-                    <img src="img/selectors.png" alt="" class="badge about__img about__img--selectors" />
-                    <span class="icon-polygon about__img about__img--polygon-blue"></span>
+                    <div class="about__content">
+                            <img src="img/comp-editor-1.svg" alt="" />
+                            <img src="img/error.png" alt="" class="badge about__img about__img--error" />
+                            <img src="img/selectors.png" alt="" class="badge about__img about__img--selectors" />
+                            <span class="icon-polygon about__img about__img--polygon-blue"></span>
+                    </div>
                 </div>
             </div>
-            <div class="about__row about__row--top">
+            <div class="about__row container about__row--top">
                 <div class="about__col about__col--txt about__col--right">
-                    <h3 class="headline">Optio quidem iusto</h3>
-                    <p>Accusantium debitis quia earum, vero, reprehenderit, id facilis obcaecati minima aliquid omnis, tenetur
-                        accusamus ab. Id vel ea et vitae magnam cupiditate pariatur dolor velit eum officiis, excepturi molestiae
-                        fugit vero aperiam.</p>
+                    <div class="about__content">
+                            <h3 class="headline">Optio quidem iusto</h3>
+                            <p>Accusantium debitis quia earum, vero, reprehenderit, id facilis obcaecati minima aliquid omnis, tenetur
+                                accusamus ab. Id vel ea et vitae magnam cupiditate pariatur dolor velit eum officiis, excepturi molestiae
+                                fugit vero aperiam.</p>
+                    </div>
                 </div>
                 <div class="about__col about__col--img about__col--left" role="presentation">
-                    <img src="img/comp-editor-2.svg" alt="" />
-                    <img src="img/ranges.png" alt="" class="badge about__img about__img--ranges" />
-                    <img src="img/success.png" alt="" class="badge about__img about__img--success" />
-                    <span class="icon-polygon about__img about__img--polygon-green"></span>
-                    <span class="icon-triangle about__img about__img--triangle"></span>
+                    <div class="about__content">
+                        <img src="img/comp-editor-2.svg" alt="" />
+                        <img src="img/ranges.png" alt="" class="badge about__img about__img--ranges" />
+                        <img src="img/success.png" alt="" class="badge about__img about__img--success" />
+                        <span class="icon-polygon about__img about__img--polygon-green"></span>
+                        <span class="icon-triangle about__img about__img--triangle"></span>
+                    </div>
                 </div>
             </div>
         </section>
